yaml_dockerfile/k8s-yaml/nameko_nginx/svc.yaml
kind: Service
apiVersion: v1
metadata: 
  name: nameko-nginx
  namespace: devops
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector: 
    app: nameko-nginx
